phan cv ben trai

--- a/index.html
+++ b/index.html
@@ -5,13 +5,52 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="index.html">
-
+    <link rel="stylesheet" href="css/index.css">
+    <!-- Google font -->
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,600,700&display=swap&subset=latin-ext,vietnamese" rel="stylesheet">
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Đinh Thị Chang</h1>
+    <div class="wrapper">
+        <div class="information container">
+            <div class="leftWrapper">
+                <div class="resume">
+                    <div class="left">
+                        <button>RESUME / CV</button>
+                        <h1>DINH <br> THI CHANG</h1>
+                    </div>
+                    <div class="right">
+                        <p class="phone">0964681627</p>
+                        <p class="email">changdt.eps@gmail.com</p>
+                        <p class="fb">facebook.com/dinhthichang</p>
+                    </div>
+                </div>
+            </div><!---END leftWrapper-->
+            <div class="rightWrapper">
+                <img src="images/avt.jpeg" alt="">
+                <div class="text">
+                    <div class="profile">
+                        <h2>PROFILE</h2>
+                        <hr>
+                        <p class="dob">02/03/1997</p>
+                        <p class="sex">Female</p>
+                        <p class="address">Tan Binh District, Ho Chi Minh</p>
+                        <hr>
+                    </div>
+                    <div class="education">
+                        <h2>EDUCATION</h2>
+                        <p>2015 - 2018</p>
+                        <p class="heading">UNIVERSITY OF SCIENCE / Information Technology</p>
+                        <p><i>Started my educational journey in University of Science</i></p>
+                    </div>
+                    
+                </div>
+            </div><!-----END rightWrapper-->
+        </div>
+    </div>
     
     <!-- Optional JavaScript -->
     <script src="index.js"></script>
